# pyGKLS

./: .gitignore  CMakeLists.txt  README.md  build_and_install.sh  extensions.py  gkls.cc  local_compile.sh  pyproject.toml  requirements.txt  setup.py  test.py  tests.py
.github/workflows/: build.yml
include/: gkls.hh  rnd_gen.hh  wrapper.hh
pygkls/: CMakeLists.txt  pygkls.pyx  tasks.py  tests.py
pygkls/include/: gkls.hh  rnd_gen.hh  wrapper.hh
pygkls/src/: example.cc  gkls.cc  rnd_gen.cc  wrapper.cc
pygkls/tests/: SBS.py  __optimizer__.py  test.ipynb
src/: example.cc  gkls.cc  rnd_gen.cc  wrapper.cc
